Resolve CSS layout issue

--- a/packages/experiments/src/css/noncritical.css
+++ b/packages/experiments/src/css/noncritical.css
@@ -1,16 +1,12 @@
-body {
-  position: fixed;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
+html, body {
+  width: 100%;
+  height: 100%;
   margin: 0px;
 }
-.CodeMirror, #editor {
+
+#editor {
   height: 100%;
   width: 100%;
-}
-.CodeMirror {
   overflow: auto;
 }
 
